syntax = "proto3";

package trackway;

service Trackway {
  rpc NewSession(stream Message) returns (stream Message) {}
}

message Message {
  enum MessageType {
    /// A message for the control plane
    MESSAGE_CONTROL = 0;
    /// A message for the prompt/lang
    MESSAGE_PROMPT = 1;
    /// A message for the I/O of an app
    MESSAGE_PIPE = 2;
  }
  MessageType message_type = 1;
  string code = 2;
  bytes data = 3;
}